--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div
         class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0"
       >
-        <!--LEFT ITEM-->
+        <!--INTRO LEFT ITEM-->
         <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
           <h1
             class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">
@@ -45,7 +45,31 @@
           <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
             Manage makes it simple for software teams to plan day-to-day taks while keeping the larger teams goals in view.
           </p>
+          <div class="flex justify-center md:justify-start">
+            <a href="#"
+            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+          </div>
         </div>
+        <!--IMAGE RIGHT ITEM-->
+        <div class="md:w-1/2">
+          <img src="/images/illustration-intro.svg" alt="">
+        </div>
+      </div>
+    </section>
+    <!--FEATURES =====    NEW SECTION-->
+    <section id="features">
+      <!--FLEX CONTAINER-->
+      <div class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row">
+        <!--  WHATS DIFFERENT LEFT SECTION   -->
+  <div>
+
+  </div>
+
+  <!--RIGHT SECTIONS NUMBERED LIST-->
+    <div>
+
+    </div>
+    
       </div>
     </section>
   </body>
