--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,11 @@
               <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
                 01
               </div>
-              <h3 class="text-base font-bold md:mb-4 md:hidden">Track company-wide progress</h3>
+              <h3 class="text-base font-bold md:mb-4 md:hidden">Track company-wide progress <h3>
             </div>
+          </div>
+          <div>
+
           </div>
         </div>
 
