--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
             </p>
           </div>
         </div>
+        <!-- LIST ITEM 2-->
         <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
           <!--heading-->
           <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
@@ -111,6 +112,7 @@
             </p>
           </div>
         </div>
+        <!--LIST ITEM 3-->
         <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
           <!--heading-->
           <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
@@ -131,13 +133,27 @@
           </div>
         </div>
     </div>
-  
     </div>
   </section>
   <!--CUSTOMER REVIEWS ====== NEW SECTION-->
+<section id="testimonials">
+  <!--CONTAINER TO HEADING AND REVIEWS-->
+  <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+    <!--HEADER FOR REVIEW-->
+    <h2 class="text-4xl font-bold text-center">
+      What's Different About Manage?
+    </h2>
+    <!--TESTOMONIALS CONTAINER-->
+    <div class="flexl flex-col mt-24 md:flex-row md:space-x-6">
+      <!--TESTIMONIAL 1-->
+      <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+        <img src="/images/avatar-anisha.png" alt="picture of woman">
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
-  
   </body>
 </html>
