--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
         </p>
       </div>
           <!--TESTIMONIAL 2-->
-          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+          <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
             <img src="/images/avatar-ali.png" class="w-16 -mt-14" alt="picture of woman">
             <h5 class="text-lg font-bold">Ali Bravo</h5>
             <p class="text-sm text-darkGrayishBlue">
@@ -162,19 +162,37 @@
             </p>
           </div>
             <!--TESTIMONIAL 3-->
-      <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+      <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
         <img src="/images/avatar-richard.png" class="w-16 -mt-14" alt="picture of woman">
         <h5 class="text-lg font-bold">Richard Watts</h5>
         <p class="text-sm text-darkGrayishBlue">
           "Manage allows us to provide structure and keeps us organized and focused. I can't stop recommending them to everyone I talk to!"
         </p>
-    
       </div>
+    </div>
+<!--BUTTON-->
+<div class="my-16">
+  <a href="#"
+  class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+</div>
+</div>
+</section>
+<!--CTA SECTION ====== NEW SECTION-->
+<section id="cta" class="bg-brightRed">
+  <!-- FLEX CONTAINER-->
+  <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+    <!--HEADING  LEFT SECTION-->
+    <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+      Simplify how your team works today.
+    </h2>
+    <!--BUTTON-->
+    <div>
+      <a href="#"
+  class="p-3 px-6 pt-2 bg-white text-brightRed rounded-full shadow-2xl baseline hover:bg-gray-300">Get Started</a>
     </div>
   </div>
 </section>
 
 
-
-  </body>
+</body>
 </html>
