--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,72 @@
     </div>
   </div>
 </section>
+<!--FOOTER SECTION ======-->
+<footer class="bg-veryDarkBlue">
+  <!--FLEX CONTAINER-->
+  <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+    <!--LOGO AND SOCIAL MEDIA LINKS CONTAINER-->
+    <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+      <div class="mx-auto my-6 text-center text-white md:hidden">
+        Copyright &copy 2022, All Rights Reserved
+      </div>
+      <!--LOGO-->
+      <div>
+        <img src="/images/logo.svg" class="h-8" alt="logo">
+      </div>
+      <!--SOCIAL MEDIA LINKS CONTAINER-->
+      <div class="flex justify-center space-x-4">
+        <!--LINK 1-->
+        <a href="#">
+          <img src="/images/icon-facebook.svg" alt="facebook icon" class="h-8">
+        </a>
+           <!--LINK 2-->
+           <a href="#">
+            <img src="/images/icon-youtube.svg" alt="youtube icon" class="h-8">
+          </a>
+             <!--LINK 3-->
+        <a href="#">
+          <img src="/images/icon-twitter.svg" alt="twitter icon" class="h-8">
+        </a>
+           <!--LINK 4-->
+           <a href="#">
+            <img src="/images/icon-pinterest.svg" alt="pinterest icon" class="h-8">
+          </a>
+             <!--LINK 5-->
+        <a href="#">
+          <img src="/images/icon-instagram.svg" alt="instagram icon" class="h-8">
+        </a>
+      </div>
+    </div>
+    <!--MENU LIST CONTAINER-->
+    <div class="flex justify-around space-x-32">
+      <div class="flex flex-col space-y-3 text-white">
+        <a href="#" class="hover:text-brightRed">Home</a>
+        <a href="#" class="hover:text-brightRed">pricing</a>
+        <a href="#" class="hover:text-brightRed">Products</a>
+        <a href="#" class="hover:text-brightRed">About</a>
+      </div>
+      <div class="flex flex-col space-y-3 text-white">
+        <a href="#" class="hover:text-brightRed">Careers</a>
+        <a href="#" class="hover:text-brightRed">Community</a>
+        <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+      </div>
+    </div>
+    <!--INPUT CONTAINER-->
+    <div class="flex flex-col justify-between">
+      <form>
+        <div class="flex space-x-3">
+          <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder="Updated in your inbox">
+          <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">Go</button>
+        </div>
+      </form>
+      <div class="hidden text-white md:block">Copyright &copy 2022, All Rights Reserved</div>
+    </div>
+  </div>
+</footer>
+
+
+
 
 
 </body>
