--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </div>
       <!--MOBILE MENU-->
       <div class="md:hidden">
-        <div id="menu" class="absolute flex flex-col items-center self-end hidden py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+        <div id="menu" class="absolute flex-col items-center self-end hidden py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
           <a href="#">Pricing</a>
           <a href="#">Product</a>
           <a href="#">About Us</a>
@@ -273,6 +273,6 @@
   </div>
 </footer>
 
-
+<script src="../js/script.js"></script>
 </body>
 </html>
